Data Prep updated and Regression added

--- a/6_Data_Preparation.ipynb
+++ b/6_Data_Preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "incoming-ethnic",
+   "id": "visible-grace",
    "metadata": {},
    "source": [
     "# Data Preparation"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "integral-modern",
+   "execution_count": 1,
+   "id": "colonial-stanley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "athletic-findings",
+   "id": "marked-march",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "every-soundtrack",
+   "execution_count": 3,
+   "id": "thrown-consolidation",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "4                 <  8 min                     HSPU  26.8  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optimum-aurora",
+   "id": "fleet-boost",
    "metadata": {},
    "source": [
     "### Drop features/observations"
@@ -629,8 +629,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "accurate-douglas",
+   "execution_count": 4,
+   "id": "round-ranking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,17 +647,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "imperial-fisher",
+   "execution_count": 5,
+   "id": "sitting-startup",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(338534, 30)"
+       "(338534, 29)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "productive-march",
+   "id": "designing-interaction",
    "metadata": {},
    "source": [
     "### Create new features"
@@ -676,8 +676,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "bronze-mills",
+   "execution_count": 6,
+   "id": "smaller-healthcare",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,8 +696,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "abstract-growth",
+   "execution_count": 7,
+   "id": "human-characterization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,8 +708,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "precious-remark",
+   "execution_count": 8,
+   "id": "violent-hanging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,8 +758,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "fantastic-produce",
+   "execution_count": 9,
+   "id": "bored-catch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "published-strand",
+   "id": "filled-compilation",
    "metadata": {},
    "source": [
     "### Cleaning"
@@ -782,8 +782,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "flexible-phone",
+   "execution_count": 10,
+   "id": "unnecessary-italy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naval-illustration",
+   "id": "conceptual-nightlife",
    "metadata": {},
    "source": [
     "### Imputation"
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extraordinary-barcelona",
+   "id": "metropolitan-paris",
    "metadata": {},
    "source": [
     "#### Workout Results"
@@ -817,8 +817,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "rough-assault",
+   "execution_count": 11,
+   "id": "congressional-outreach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indirect-effect",
+   "id": "dedicated-venezuela",
    "metadata": {},
    "source": [
     "#### Body Measurements\n",
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupational-tourist",
+   "id": "psychological-lindsay",
    "metadata": {},
    "source": [
     "#### Benchmark Statistics\n",
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "senior-staff",
+   "id": "postal-dream",
    "metadata": {},
    "source": [
     "---\n",
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "individual-avatar",
+   "id": "latin-cutting",
    "metadata": {},
    "source": [
     "### Define superior dataframes"
@@ -880,8 +880,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "prescribed-saudi",
+   "execution_count": 12,
+   "id": "successful-anatomy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,14 +889,17 @@
     "df_rank = df[(df['division']=='Men')|(df['division']=='Women')]\n",
     "df_rank = df_rank.drop(['division'],1)\n",
     "# define dataset for HSPU-classification model\n",
-    "df_hspu = df.drop(['division','overallrank','w4_bmu_status'],1)\n",
+    "df_hspu = df.drop(['division','overallrank','w4_bmu_status', \\\n",
+    "                   'w3_5ft_reps_ohl','w3_reps_dbbsu','w3_reps_hspu','w3_5ft_reps_hsw', \\\n",
+    "                   'scaled_3'],1)\n",
     "# define dataset for BMU-classification model\n",
-    "df_bmu = df.drop(['division','overallrank','w3_hspu_status'],1)"
+    "df_bmu = df.drop(['division','overallrank','w3_hspu_status', \\\n",
+    "                  'w4_reps_sn','w4_reps_bp','w4_reps_bmu'],1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "equipped-confusion",
+   "id": "tutorial-router",
    "metadata": {},
    "source": [
     "#### 01 - 19 - Open 19 complete case analysis"
@@ -904,8 +907,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "joint-stability",
+   "execution_count": 13,
+   "id": "positive-consortium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excellent-velvet",
+   "id": "horizontal-accessory",
    "metadata": {},
    "source": [
     "#### 02 - 19imp - Open 19 dataset with imputed values (zero)"
@@ -956,8 +959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "right-horror",
+   "execution_count": 14,
+   "id": "unlikely-filing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranging-conducting",
+   "id": "standard-reality",
    "metadata": {},
    "source": [
     "#### 03 - 19_hw - Open 19 complete case analysis with heights & weights"
@@ -987,8 +990,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "judicial-puzzle",
+   "execution_count": 15,
+   "id": "hawaiian-colombia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consecutive-hostel",
+   "id": "material-disease",
    "metadata": {},
    "source": [
     "#### 04 - 19imp_hw - Open 19 dataset with imputed values (zero) with heights & weights"
@@ -1033,8 +1036,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "rolled-discovery",
+   "execution_count": 16,
+   "id": "technical-conversation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "direct-affect",
+   "id": "robust-reduction",
    "metadata": {},
    "source": [
     "#### 05 - 19_bs - Open 19 complete case analysis with olympic lifts"
@@ -1058,8 +1061,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "technological-limit",
+   "execution_count": 17,
+   "id": "political-liverpool",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intelligent-letter",
+   "id": "altered-sydney",
    "metadata": {},
    "source": [
     "#### 06 - 19imp_bs - Open 19 dataset with imputed values (zero) with olympic lifts"
@@ -1116,8 +1119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "convenient-childhood",
+   "execution_count": 18,
+   "id": "prime-motivation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifth-donor",
+   "id": "green-skirt",
    "metadata": {},
    "source": [
     "#### 07 - 19_hw_bs - Open 19 complete case analysis with heights&weights and olympic lifts"
@@ -1150,8 +1153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "familiar-bosnia",
+   "execution_count": 19,
+   "id": "forbidden-documentary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-andorra",
+   "id": "bizarre-monte",
    "metadata": {},
    "source": [
     "#### 08 - 19imp_hw_bs - Open 19 dataset with imputed values (zero) with heights&weights and olympic lifts"
@@ -1205,8 +1208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "later-valentine",
+   "execution_count": 20,
+   "id": "younger-devon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automotive-elevation",
+   "id": "impressed-theater",
    "metadata": {},
    "source": [
     "#### 09 - 19_bsimp - Open 19 complete case analysis with olympic lifts (to be imputed)"
@@ -1239,8 +1242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "id": "structural-interest",
+   "execution_count": 21,
+   "id": "superb-papua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addressed-penetration",
+   "id": "documented-telling",
    "metadata": {},
    "source": [
     "#### 10 - 19imp_bsimp - Open 19 dataset with imputed values (zero) with olympic lifts (to be imputed)"
@@ -1285,8 +1288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "hearing-engine",
+   "execution_count": 22,
+   "id": "architectural-treaty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genuine-hospital",
+   "id": "directed-circulation",
    "metadata": {},
    "source": [
     "#### 11 - 19_hw_bsimp - Open 19 complete case analysis with heights&weights and olympic lifts (to be imputed)"
@@ -1307,8 +1310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "cubic-netscape",
+   "execution_count": 23,
+   "id": "mobile-tourism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerical-country",
+   "id": "adjustable-saskatchewan",
    "metadata": {},
    "source": [
     "#### 12 - 19imp_hw_bsimp - Open 19 dataset with imputed values (zero) with heights&weights and olympic lifts (to be imputed)"
@@ -1347,8 +1350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "animated-solid",
+   "execution_count": 24,
+   "id": "alive-johnston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-desperate",
+   "id": "chief-insulin",
    "metadata": {},
    "source": [
     "---\n",
@@ -1370,8 +1373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "acting-notification",
+   "execution_count": 25,
+   "id": "raising-wheel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "governmental-morrison",
+   "id": "adequate-projection",
    "metadata": {},
    "outputs": [],
    "source": []
