classification notebooks finished

--- a/8_Classification_HSPU.ipynb
+++ b/8_Classification_HSPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "distinguished-master",
+   "id": "moving-lindsay",
    "metadata": {},
    "source": [
     "# Classification of HSPU Ability"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "beneficial-waste",
+   "id": "affiliated-mills",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "superb-isolation",
+   "id": "alien-jerusalem",
    "metadata": {},
    "source": [
     "# Selection of ML Algorithm"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lonely-standing",
+   "id": "magnetic-denial",
    "metadata": {},
    "source": [
     "In this section one of the 12 datasets (with data of workout scores, body measurements and olympic lifts including imputation of missing data) is taken to find an appropriate classification algorithm."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "hairy-norway",
+   "id": "homeless-blind",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "minor-share",
+   "id": "requested-natural",
    "metadata": {},
    "outputs": [
     {
@@ -144,18 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "rational-miracle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_models_copy = results_models"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
-   "id": "pursuant-event",
+   "id": "portuguese-heating",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outstanding-slovakia",
+   "id": "suspended-estonia",
    "metadata": {},
    "source": [
     "The best Classifier for this task seems to be Logistic Regression, KNN and the Random Forest Classifier. In the following sections the Random Forest Algorithm will be used because of better interpretability and an accuracy of almost 89%."
@@ -194,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "central-diary",
+   "id": "closed-praise",
    "metadata": {},
    "source": [
     "---\n",
@@ -203,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "studied-madonna",
+   "id": "cloudy-topic",
    "metadata": {},
    "source": [
     "In this section several combinations of data from Data Preparation Notebook are used for the Random Forest algorithm to show the impact of each dataset. At the end the best data combination will be used for the final HSPU classification model."
@@ -212,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "expressed-glasgow",
+   "id": "future-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "emerging-philadelphia",
+   "id": "enabling-train",
    "metadata": {},
    "outputs": [
     {
@@ -308,18 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "polished-mayor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_best_dataset = results"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 102,
-   "id": "legitimate-modification",
+   "id": "differential-bench",
    "metadata": {},
    "outputs": [
     {
@@ -350,15 +330,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amended-gardening",
+   "id": "maritime-disabled",
    "metadata": {},
    "source": [
-    "XXX"
+    "Here, imputed missing values for the Open workout results seem to be better than the complete case analysis. The best score is achieved when all dataframes are considered (with imputed workout results and imputed olympic benchmark lifts) - dataframe Nr. 12."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "circular-receiver",
+   "id": "explicit-embassy",
    "metadata": {},
    "source": [
     "---\n",
@@ -367,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "horizontal-banks",
+   "id": "continuous-medium",
    "metadata": {},
    "source": [
     "With the help of the selected algorithm and the most promising dataset, in this section the first Random Forest Classification model is build and analyzed."
@@ -376,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "arbitrary-contact",
+   "id": "prescribed-vanilla",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "global-midwest",
+   "id": "cordless-delicious",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "excited-relay",
+   "id": "ranging-drove",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "numerical-stanley",
+   "id": "surgical-manchester",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +461,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spread-classics",
+   "id": "falling-california",
+   "metadata": {},
+   "source": [
+    "With the given scores, the model seems to be overfitted. Thus, hyperparameter tuning will be carried out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "drawn-master",
    "metadata": {},
    "source": [
     "---\n",
@@ -491,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "upper-million",
+   "id": "southeast-absence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "prime-grounds",
+   "id": "about-african",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "weighted-mount",
+   "id": "manufactured-domain",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "compound-grade",
+   "id": "amino-sensitivity",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "magnetic-monkey",
+   "id": "responsible-chosen",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +624,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-diameter",
+   "id": "commercial-necessity",
+   "metadata": {},
+   "source": [
+    "Now, the model isn't overfitted anymore and we can use the test set to evaluate the found random forest model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "revolutionary-maintenance",
    "metadata": {},
    "source": [
     "---\n",
@@ -646,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "genetic-cookie",
+   "id": "alternate-pipeline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "bizarre-newark",
+   "id": "external-ready",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "characteristic-special",
+   "id": "animated-journal",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "hydraulic-expense",
+   "id": "judicial-adoption",
    "metadata": {},
    "outputs": [
     {
@@ -730,19 +726,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "literary-density",
+   "id": "considered-mercury",
    "metadata": {},
    "source": [
-    "XXX"
+    "The model has an accuracy of over 89%. Just 5-6% of the data are predicted false negative/positive. It has been shown that outcomes of a CrossFit workout - performing minimum one Strict Handstand Push-Up - is predictable with score much better than the dummy classifier. Unfortunately data of body measurements and benchmark statistics do not contribute as much as expected. A reason for that could be the high amount of missing data."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "encouraging-litigation",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
